--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"@types/yargs": "^17.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.9.1",
 		"@typescript-eslint/parser": "^5.9.1",
-		"eslint": "^8.6.0",
+		"eslint": "^8.7.0",
 		"nodemon": "^2.0.15",
 		"npm-check-updates": "12.1.0",
 		"ts-loader": "^9.2.6",
@@ -29,11 +29,12 @@
 		"typescript": "4.5.4"
 	},
 	"dependencies": {
-		"@polkadot/api": "7.3.1",
-		"moonbeam-types-bundle": "^2.0.2",
+		"@polkadot/api": "^7.1.2",
 		"axios": "^0.24.0",
 		"bn.js": "^5.2.0",
 		"currency-formatter": "^1.5.9",
-		"yargs": "^17.3.1"
+		"yargs": "^17.3.1",
+		"@acala-network/api": "^4.0.1",
+		"moonbeam-types-bundle": "^2.0.2"
 	}
 }
