--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
 		"typescript": "4.5.4"
 	},
 	"dependencies": {
+		"@acala-network/api": "^4.0.1",
+		"@open-web3/orml-types": "^1.0.1",
 		"@polkadot/api": "^7.1.2",
 		"axios": "^0.24.0",
 		"bn.js": "^5.2.0",
 		"currency-formatter": "^1.5.9",
-		"yargs": "^17.3.1",
-		"@acala-network/api": "^4.0.1",
-		"moonbeam-types-bundle": "^2.0.2"
+		"moonbeam-types-bundle": "^2.0.2",
+		"yargs": "^17.3.1"
 	}
 }
