--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"npm-check-updates": "12.1.0",
 		"ts-loader": "^9.2.6",
 		"ts-node": "^10.4.0",
-		"typescript": "4.5.4"
+		"typescript": "4.5.4",
+		"typescript-formatter": "^7.2.2"
 	},
 	"dependencies": {
 		"@acala-network/api": "^4.0.1",
