--- a/package.json
+++ b/package.json
@@ -30,13 +30,11 @@
 		"typescript-formatter": "^7.2.2"
 	},
 	"dependencies": {
-		"@acala-network/api": "4.0.1@beta",
-		"@open-web3/orml-types": "^1.1.3",
-		"@polkadot/api": "^7.15.1",
+		"@polkadot/api": "^7.1.1",
+		"@acala-network/types": "4.0.1",
 		"axios": "^0.26.1",
 		"bn.js": "^5.2.0",
 		"currency-formatter": "^1.5.9",
-		"moonbeam-types-bundle": "^2.0.4",
 		"yargs": "^17.4.0"
 	}
 }
