--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-node_modules
+node_modules/
 key
 build
 accounts*.json
+.idea/
+.vscode/
+build/
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
