--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -7,7 +7,7 @@
 		],
 		"allowJs": true,
 		"outDir": "build",
-		"rootDir": "src",
+		"rootDir": "core/src",
 		// Some compiling checks.
 		"strict": true,
 		"noImplicitAny": true,
