--- a/cli/package.json
+++ b/cli/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "polkadot-portfolio-core",
+	"name": "polkadot-portfolio-cli",
 	"version": "0.1.1",
-	"description": "Core engine to scrape the portfolio fo an account in the Polkadot ecosystem.",
+	"description": "CLI App to scrape the portfolio fo an account in the Polkadot ecosystem.",
 	"main": "build/index.js",
 	"types": "build/index.d.ts",
 	"scripts": {
@@ -29,7 +29,8 @@
 		"ts-loader": "^9.2.8",
 		"ts-node": "^10.7.0",
 		"typescript": "4.6.3",
-		"typescript-formatter": "^7.2.2"
+		"typescript-formatter": "^7.2.2",
+		"polkadot-portfolio-core": "../core"
 	},
 	"dependencies": {
 		"@acala-network/types": "4.0.1",
@@ -44,6 +45,7 @@
 		"axios": "^0.26.1",
 		"bn.js": "^5.2.0",
 		"currency-formatter": "^1.5.9",
-		"loadash": "^1.0.0"
+		"loadash": "^1.0.0",
+		"yargs": "^17.4.0"
 	}
 }
