--- a/cli/package.json
+++ b/cli/package.json
@@ -17,8 +17,6 @@
 		"@babel/cli": "^7.17.6",
 		"@babel/core": "^7.17.8",
 		"@babel/preset-typescript": "^7.16.7",
-		"@types/currency-formatter": "^1.5.1",
-		"@types/lodash": "^4.14.182",
 		"@types/node": "^17.0.23",
 		"@types/yargs": "^17.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
@@ -29,23 +27,11 @@
 		"ts-loader": "^9.2.8",
 		"ts-node": "^10.7.0",
 		"typescript": "4.6.3",
-		"typescript-formatter": "^7.2.2",
-		"polkadot-portfolio-core": "../core"
+		"typescript-formatter": "^7.2.2"
 	},
 	"dependencies": {
-		"@acala-network/types": "4.0.1",
-		"@open-web3/orml-types": "^1.1.3",
 		"@polkadot/api": "7.1.1",
-		"@polkadot/rpc-augment": "7.1.1",
-		"@polkadot/rpc-core": "7.1.1",
-		"@polkadot/api-augment": "7.1.1",
-		"@polkadot/types-codec": "7.1.1",
-		"@polkadot/types-create": "7.1.1",
-		"@polkadot/types": "7.1.1",
-		"axios": "^0.26.1",
-		"bn.js": "^5.2.0",
-		"currency-formatter": "^1.5.9",
-		"loadash": "^1.0.0",
-		"yargs": "^17.4.0"
+		"yargs": "^17.4.0",
+		"polkadot-portfolio-core": "../core"
 	}
 }
