--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -1,10 +1,9 @@
 {
 	"compilerOptions": {
 		"target": "es6",
-		"module": "commonjs",
-		"lib": [
-			"es6"
-		],
+		"module": "es6",
+		"lib": ["es6", "dom", "es2016", "es2017", "es2018", "es2019", "es2020"],
+		"moduleResolution": "node",
 		"allowJs": true,
 		"rootDir": "./src",
 
@@ -21,7 +20,7 @@
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
-		"resolveJsonModule": true,
+		"resolveJsonModule": false,
 
 		"declaration": false,
 		"emitDeclarationOnly": false,
