--- a/core/package.json
+++ b/core/package.json
@@ -5,10 +5,11 @@
 	"main": "build/index.js",
 	"types": "build/index.d.ts",
 	"scripts": {
-		"dev": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/ts-node ./src/index.ts",
+		"clean": "./node_modules/.bin/rimraf build",
+		"dev": "./node_modules/.bin/tsc --pretty --declaration --watch",
 		"update": "./node_modules/.bin/ncu -u && yarn",
 		"lint": "eslint . --ext .ts --fix",
-		"build": "./node_modules/.bin/tsc --pretty --declaration"
+		"build": "npm run clean && ./node_modules/.bin/tsc --pretty --declaration"
 	},
 	"author": "@kianenigma",
 	"license": "ISC",
@@ -25,6 +26,7 @@
 		"eslint": "^8.12.0",
 		"nodemon": "^2.0.15",
 		"npm-check-updates": "12.5.7",
+		"rimraf": "^3.0.2",
 		"ts-loader": "^9.2.8",
 		"ts-node": "^10.7.0",
 		"typescript": "4.6.3",
@@ -33,13 +35,7 @@
 	"dependencies": {
 		"@acala-network/types": "4.0.1",
 		"@open-web3/orml-types": "^1.1.3",
-		"@polkadot/api": "7.1.1",
-		"@polkadot/api-augment": "7.1.1",
-		"@polkadot/rpc-augment": "7.1.1",
-		"@polkadot/rpc-core": "7.1.1",
-		"@polkadot/types": "7.1.1",
-		"@polkadot/types-codec": "7.1.1",
-		"@polkadot/types-create": "7.1.1",
+		"@polkadot/api": "^7.1.1",
 		"axios": "^0.26.1",
 		"bn.js": "^5.2.0",
 		"currency-formatter": "^1.5.9",
