--- a/core/package.json
+++ b/core/package.json
@@ -33,12 +33,11 @@
 		"typescript-formatter": "^7.2.2"
 	},
 	"dependencies": {
+		"@polkadot/api": "^8.13.1",
+		"bn.js": "4.12.0",
 		"@acala-network/types": "4.0.1",
-		"@open-web3/orml-types": "^1.1.3",
-		"@polkadot/api": "^7.1.1",
+		"@open-web3/orml-types": "1.1.3",
 		"axios": "^0.26.1",
-		"bn.js": "^5.2.0",
-		"currency-formatter": "^1.5.9",
-		"loadash": "^1.0.0"
+		"currency-formatter": "^1.5.9"
 	}
 }
