add linter and pretifier project wide

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"[typescript]": {
 		"editor.formatOnSave": true,
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
-	}
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"editor.formatOnSave": true,
+	"editor.defaultFormatter": "vscode.typescript-language-features"
 }
