--- a/cli/.eslintrc
+++ b/cli/.eslintrc
@@ -7,10 +7,14 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"plugin:prettier/recommended"
 	],
 	"rules": {
 		"@typescript-eslint/ban-ts-comment": "warn",
-		"indent": ["error", 2]
+		"indent": [
+			"error",
+			"tab"
+		],
 	}
 }
