--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -1,31 +1,28 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"module": "commonjs",
-		"lib": [
-			"es6"
-		],
-		"allowJs": true,
-		"rootDir": "./src",
-		// Some compiling checks.
-		"strict": true,
-		"noImplicitAny": true,
-		"strictNullChecks": true,
-		"strictFunctionTypes": true,
-		"strictPropertyInitialization": true,
-		"noImplicitThis": true,
-		"alwaysStrict": true,
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "lib": ["es6"],
+    "allowJs": true,
+    "rootDir": "./src",
+    // Some compiling checks.
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
 
-		// dep resolution
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"experimentalDecorators": true,
-		"resolveJsonModule": true,
+    // dep resolution
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
 
-		"declaration": false,
-		"emitDeclarationOnly": false,
-		"outDir": "build",
-		"declarationMap": false
-	}
+    "declaration": false,
+    "emitDeclarationOnly": false,
+    "outDir": "build",
+    "declarationMap": false
+  }
 }
-
