--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -7,9 +7,17 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"plugin:react/recommended", 
+		"plugin:prettier/recommended"
 	],
+	"env": {
+    "browser": true,
+    "es2021": true,
+    "jest": true
+  },
 	"rules": {
+		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/ban-ts-comment": "warn",
 		"indent": ["error", 2]
 	}
