--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bn.js": "^5.2.0",
-    "currency-formatter": "^1.5.9",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
@@ -15,19 +13,24 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "bn.js": "^5.2.0",
     "classnames": "^2.3.1",
+    "currency-formatter": "^1.5.9",
+    "polkadot-portfolio-core": "../core",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4",
-    "polkadot-portfolio-core": "../core"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/currency-formatter": "^1.5.1",
     "@types/lodash": "^4.14.182",
     "autoprefixer": "^10.4.7",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.13",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.24"
   },
   "scripts": {
@@ -36,6 +39,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .ts --fix",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "link": "link ../core"
   },
   "eslintConfig": {
