--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
-	"[typescript]": {
-		"editor.formatOnSave": true,
-		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	},
 	"editor.formatOnSave": true,
-	"editor.defaultFormatter": "vscode.typescript-language-features"
+	"editor.defaultFormatter": "vscode.typescript-language-features",
+	"editor.tabSize": 2,
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false
 }
