--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -19,6 +19,6 @@
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/ban-ts-comment": "warn",
-		"indent": ["error", 2]
+		"indent": "off"
 	}
 }
