--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,19 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm ci, build and test
+      - name: Build Core Project
+        run: |
+          cd ./core
+          npm install
+          npm run build
+      - name: Build React Project
         run: |
           cd ./ui
           npm install
-          npm run build --if-present  
+          npm link ../core
+          npm run build
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./ui/build         
+          publish_dir: ./ui/build
