--- a/cli/package.json
+++ b/cli/package.json
@@ -19,6 +19,8 @@
 		"@babel/cli": "^7.17.6",
 		"@babel/core": "^7.17.8",
 		"@babel/preset-typescript": "^7.16.7",
+		"@types/bn.js": "^5.1.0",
+		"@types/currency-formatter": "^1.5.1",
 		"@types/node": "^17.0.23",
 		"@types/yargs": "^17.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
@@ -36,6 +38,8 @@
 	},
 	"dependencies": {
 		"polkadot-portfolio-core": "../core",
+		"bn.js": "4.12.0",
+		"currency-formatter": "1.5.9",
 		"yargs": "^17.4.0"
 	}
 }
