--- a/core/package.json
+++ b/core/package.json
@@ -38,9 +38,10 @@
 		"typescript-formatter": "^7.2.2"
 	},
 	"dependencies": {
-		"@polkadot/api": "^8.13.1",
 		"@acala-network/types": "4.0.1",
 		"@open-web3/orml-types": "1.1.3",
+		"@polkadot/api": "^8.13.1",
+		"@polkadot/util-crypto": "^10.1.1",
 		"axios": "^0.26.1",
 		"bn.js": "4.12.0"
 	}
