clean build, make acala work etc

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -27,5 +27,6 @@
 		"outDir": "build",
 		"declarationMap": false,
 		"skipLibCheck": true
-	}
+	},
+	"exclude": ["**/*.test.ts", "jest.config.js"],
 }
