--- a/core/package.json
+++ b/core/package.json
@@ -6,6 +6,7 @@
 	"types": "build/index.d.ts",
 	"scripts": {
 		"clean": "./node_modules/.bin/rimraf build",
+		"test": "./node_modules/.bin/jest",
 		"dev": "./node_modules/.bin/tsc --pretty --declaration --watch",
 		"update": "./node_modules/.bin/ncu -u && yarn",
 		"lint": "eslint . --ext .ts --fix",
@@ -20,6 +21,7 @@
 		"@babel/core": "^7.17.8",
 		"@babel/preset-typescript": "^7.16.7",
 		"@types/currency-formatter": "^1.5.1",
+		"@types/jest": "^28.1.6",
 		"@types/lodash": "^4.14.182",
 		"@types/node": "^17.0.23",
 		"@types/yargs": "^17.0.10",
@@ -28,18 +30,20 @@
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^28.1.3",
 		"nodemon": "^2.0.15",
-		"npm-check-updates": "12.5.7",
+		"npm-check-updates": "^16.0.0",
 		"prettier": "^2.7.1",
 		"rimraf": "^3.0.2",
+		"ts-jest": "^28.0.7",
 		"ts-loader": "^9.2.8",
 		"ts-node": "^10.7.0",
 		"typescript": "4.6.3",
 		"typescript-formatter": "^7.2.2"
 	},
 	"dependencies": {
-		"@acala-network/types": "4.0.1",
-		"@open-web3/orml-types": "1.1.3",
+		"@acala-network/types": "4.1.5",
+		"@open-web3/orml-types": "2.0.1",
 		"@polkadot/api": "^8.13.1",
 		"@polkadot/util-crypto": "^10.1.1",
 		"axios": "^0.26.1",
