--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,7 @@
 		"polkadot-portfolio-core": "../core",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
-		"react-scripts": "^2.1.3",
+		"react-scripts": "5.0.1",
 		"typescript": "^4.6.3",
 		"web-vitals": "^2.1.4"
 	},
