--- a/ui/.eslintrc
+++ b/ui/.eslintrc
@@ -19,6 +19,7 @@
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"@typescript-eslint/ban-ts-comment": "warn",
-		"indent": "off"
+		"indent": "off",
+		"react/prop-types": 0
 	}
 }
