--- a/ui/package.json
+++ b/ui/package.json
@@ -53,9 +53,11 @@
 	"homepage": "https://substrate-portfolio.github.io/polkadot-portfolio",
 	"browserslist": {
 		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
+			"chrome >= 67",
+			"edge >= 79",
+			"firefox >= 68",
+			"opera >= 54",
+			"safari >= 14"
 		],
 		"development": [
 			"last 1 chrome version",
