--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.1.1",
 		"@fortawesome/react-fontawesome": "^0.1.18",
 		"@polkadot/react-identicon": "^2.9.1",
+		"@polkadot/extension-dapp": "0.44.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^13.5.0",
